# qs-react-native-zksync

./: .gitignore  .gitmodules  Cargo.toml  README.md  android_build.sh  bitrise.yml  build.sh  build.sh.old  build_local.sh  cargo_config.toml  combined_build.sh  index.js  ios_build.sh  local_build.sh  package-lock.json  package.json  react-native-zksync.podspec  rust_build.sh  temp.txt
.circleci/: config.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: .detoxrc.json  App.js  metro.config.js  package-lock.json  package.json  testData.json
example/android/: build.gradle
example/android/app/: build.gradle
example/e2e/: config.json  firstTest.e2e.js
example/ios/: File.swift
example/ios/example.xcodeproj/: project.pbxproj
ios/: ZkSync-Bridging-Header.h  ZkSync.h  ZkSync.m  ZkSync.swift  zksyncsign.h
ios-old/: ZkSync.m  ZkSync.swift
ios-old/ZkSync.xcodeproj/: project.pbxproj
ios/ZkSync.xcodeproj/: project.pbxproj
ios/ZkSync.xcworkspace/: contents.xcworkspacedata
scripts/: android_build.sh  combined_build.sh  ios_build.sh  ios_post_install.sh  local_build.sh
sdk/zksync-java/: Cargo.toml  ZkSync.h  android_build.sh  ios_build.sh
sdk/zksync-java/java/: ZkSync.java
sdk/zksync-java/src/: android.rs  android_cl.rs  ios.rs  lib.rs  sign.rs  tests.rs  utils.rs
sdk/zksync-native/: Cargo.toml  android_build.sh  zksyncsign.h
sdk/zksync-native/src/: sign.rs  utils.rs
sdk/zksync.js/: package-lock.json  package.json
sdk/zksync.js/src/: crypto.ts  wallet.ts
zksync/: .gitignore  Cargo.toml
zksync/sdk/zksync-java/: Cargo.toml
zksync/sdk/zksync-java/src/: android.rs  lib.rs
zksync/sdk/zksync-native/src/: ios.rs  lib.rs
zksync/sdk/zksync.js/: package-lock.json  package.json
zksync/sdk/zksync.js/src/: crypto.ts  signer.ts
(+4 files in other folders)
