[package]
name = "zksync-native"
version = "0.1.0"
authors = ["Nicholas Vincent <emailnjv@gmail.com>"]
edition = "2018"

[lib]
name = "zksyncsign"
crate-type = ["staticlib", "cdylib"]

[dependencies]
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="check-franklin-circuit-transpile"}
zksync_types = { path = "../../core/lib/types", version = "1.0" }
rand = "0.4"

hex = "0.4"
sha2 = "0.8"
openssl = { version = "0.10", features = ["vendored"] }

crypto_lib = { package = "zksync_crypto", path = "../../core/lib/crypto" }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.17.0", default-features = true }

[dev-dependencies]
zksync_types = { path = "../../core/lib/types" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
